<resources>
    <string name="app_name">PetzDaily</string>
    <string name="txtView">LOGIN</string>
    <string name="txtNome">Nome</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtLogin">Login</string>
    <string name="txtPassword">Senha</string>

    <string name="btnLogar">Acessar</string>
    <string name="txtQuest">Ainda não possui um login? Registrar-se</string>

    <!-- string cadastro -->

    <string name="txtView1">LOGO</string>
    <string name="edtNome"></string>
    <string name="edtEmail"></string>
    <string name="edtLogin"></string>
    <string name="edtPassword"></string>
    <string name="btnCadastrar">Cadastrar</string>

    <!--String Cadastro Perfil -->
    <string name="edt_CpNome">NOME</string>
    <string name="edt_CpRaca">RAÇA</string>
    <string name="edt_CpEspecie">ESPÉCIE</string>
    <string name="edt_CpIdade">IDADE</string>
    <string name="edt_CpSexo">SEXO</string>
    <string name="txt_CpNome"></string>
    <string name="txt_CpRaca"></string>
    <string name="txt_CpEspecie"></string>
    <string name="txt_CpIdade"></string>
    <string name="txt_cadastre">CADASTRE O PERFIL!</string>
    <string name="title_activity_petz_daily_navigation">ActivityPetzDailyNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Eventos-->
    <string name="txtIE">CRIAR EVENTO</string>
    <string name="btnPesquisar">Pesquisar</string>
    <string name="title_activity_petz_daily_evento_nav">PetzDailyEventoNav</string>
    <string name="title_activity_cadastro_petz_daily_nav">CadastroPetzDailyNav</string>
    <string name="btnCriar">Criar</string>
    <string name="title_activity_carteira_vacina">carteira_vacina</string>

    <!--Vacina-->
    <string name="txtNVacina">Nome da vacina</string>
    <string name="txtDVacina">Data</string>
    <string name="txtRVacina">Reações</string>
    <string name="edtNvacina"></string>
    <string name="edtDVacina"></string>
    <string name="edtOVacina"></string>
    <string name="btnSalvarV">Salvar</string>
    <string name="title_activity_petz_daily_tela_usuario_nav">petzDailyTelaUsuarioNav</string>
    <string name="title_activity_petz_daily_perfil_pet_nav">PetzDailyPerfilPetNav</string>
    <string name="title_activity_petz_daily_pet_perfil">PetzDailyPetPerfil</string>

    <!--Perfil Pet-->
    <string name="btnEditar">Editar</string>
    <string name="txtDescricao">Descrição do Pet</string>
    <string name="title_activity_petz_daily_princi_perfil_nav">PetzDailyPrinciPerfilNav</string>
    <string name="title_activity_petz_daily_criacao_evento_nav">PetzDailyCriacaoEventoNav</string>

    <string name="txtNomeEvento">Nome</string>
    <string name="txtLocalEvento">Local</string>
    <string name="txtTipoEvento">Tipo</string>
    <string name="txtDescricaoEvento">Descrição</string>
    <string name="title_activity_petz_daily_vacina_nav">PetzDailyVacinaNav</string>

</resources>
	

